--- a/html y css/eventos.html.html
+++ b/html y css/eventos.html.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WEBCREATOR</title>
     <link rel="stylesheet" href="header y footer.css">
-    <link rel="icon" href="fes.png" type="image/png">
+    <link rel="icon" href="logo.png" type="image/png">
 
     </head>
 <body>
@@ -13,21 +13,54 @@
   
   
   
-  <div class="menu1">
   
+  <nav>
     <ul class="menu">
-      <li> WEBCREATOR <img src="fes.png" alt="" class="logo"></li>
-      <li>  INICIO </li>
-      <li> INSCRIPCION </li>
-      <li>  ABOUT US </li>
+      <li> WEBCREATOR </li>
+      <li>  INICIO <a href="url"></a></li>
+      <li> INSCRIPCION <a href="url"></a></li>
+      <li>  ABOUT US<a href="url"></a> </li>
    </ul>
-</div>
+  </nav>
 
 
 
 
 
 
+
+
+
+
+
+
+
+<footer>
+<ul class="Q">
+  <li>dw</li>
+  <li>wqe</li>
+  <li>weq</li> 
+  <li>qwe</li>
+</ul>
+
+<ul class="e">
+  <li>qwe</li>
+  <li>qwe</li>
+  <li>qwe</li> 
+  <li>qe</li>
+</ul>
+
+
+<ul class="3">
+  <li>qwe</li>
+  <li>qwe</li>
+  <li>wqe</li> 
+  <li>qwe</li>
+</ul>
+
+
+
+</footer>
 
 </body>
 </html>
