--- a/html y css/FormularioInscripción.html
+++ b/html y css/FormularioInscripción.html
@@ -1,1 +1,20 @@
-
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <title>Formulario de Inscripción</title>
+</head>
+<body>
+    <h1>Formulario de Inscripción</h1>
+    <form action= "/submit" target= "_blank">
+      <label for="Nombre"> Nombre:</label>
+        <input type="text" id="Nombre" name="Nombre"><br><br> 
+      <label for="Apellidos"> Apellidos:</label>
+        <input type= "text" id="Apellidos" name="Apellidops"><br><br>
+      <label for="DNI"> DNI:</label>
+        <input type= "text" id="DNI" name="DNI"><br><br>
+      <label for="Fecha de Nacimiento"> Fecha de Nacimiento: </label>
+        <input type= "text" id="Fecha de Nacimiento" name="Fecha de Nacimiento"><br><br>
+      <label  for="Email"> Email:</label>
+        <input type= "text" id="Email" name="Email"><br><br>
+      
