Change input type for birth date to 'date'

--- a/html y css/FormularioInscripción.html
+++ b/html y css/FormularioInscripción.html
@@ -14,7 +14,7 @@
       <label for="DNI"> DNI:</label>
         <input type= "text" id="DNI" name="DNI"><br><br>
       <label for="Fecha de Nacimiento"> Fecha de Nacimiento: </label>
-        <input type= "text" id="Fecha de Nacimiento" name="Fecha de Nacimiento"><br><br>
+        <input type= "date" id="Fecha de Nacimiento" name="Fecha de Nacimiento"><br><br>
       <label  for="Email"> Email:</label>
         <input type= "text" id="Email" name="Email"><br><br>
       
