--- a/html y css/eventos.html.html
+++ b/html y css/eventos.html.html
@@ -6,14 +6,10 @@
     <title>WEBCREATOR</title>
     <link rel="stylesheet" href="header y footer.css">
     <link rel="icon" href="logo.png" type="image/png">
-
+    <link rel="stylesheet" href="eventos.css">
     </head>
 <body>
-   
-  
-  
-  
-  
+  <header>
   <nav>
     <ul class="menu">
       <li> WEBCREATOR </li>
@@ -22,6 +18,38 @@
       <li>  ABOUT US<a href="url"></a> </li>
    </ul>
   </nav>
+  </header> 
+  <main>
+     <table>
+    <tr> 
+      <tr>
+      <td><img src="verco.png" alt="" srcset=""><p>kbmjkohsnbgionhjnohuiosrhbvuiowhuiothbv9whuibvhhivhi
+        hnkjfnjkhbvjkhfjvjhfjkvhnjknkvjnhhdfnhdfh</p></td>
+       
+        <td><img src="carreranoc.png" alt="" srcset=""><p>kbmjkohsnbgionhjnohuiosrhbvuiowhuiothbv9whuibvhhivhi
+        hnkjfnjkhbvjkhfjvjhfjkvhnjknkvjnhhdfnhdfh</p></td>
+       </tr> 
+      <tr>
+       <td><img src="c2.png" alt="" srcset=""><p>kbmjkohsnbgionhjnohuiosrhbvuiowhuiothbv9whuibvhhivhi
+        hnkjfnjkhbvjkhfjvjhfjkvhnjknkvjnhhdfnhdfh</p></td>
+        
+        <td><img src="c1.png" alt="" srcset=""><p>kbmjkohsnbgionhjnohuiosrhbvuiowhuiothbv9whuibvhhivhi
+        hnkjfnjkhbvjkhfjvjhfjkvhnjknkvjnhhdfnhdfh</p></td>
+        </tr>
+   </tr>
+  
+  </table>
+
+
+
+
+
+
+
+
+
+
+    </main>
 
 
 
