Comienzo de formulario

--- a/html y css/FormularioInscripción.html
+++ b/html y css/FormularioInscripción.html
@@ -13,21 +13,25 @@
             <option value="Tour"> Tour</option>
             <option value="Encuentro nocturno"> Encuentro nocturno</option>
             <option value="Exposicion"> Exposición</option>
-            <br><br>
         </select><br><br>
       <label for="Nombre"> Nombre:</label>
-        <input type="text" id="Nombre" name="Nombre"><br><br> 
+        <input type="text" id="Nombre" name="Nombre"><br><br>
+
       <label for="Apellidos"> Apellidos:</label>
-        <input type= "text" id="Apellidos" name="Apellidops"><br><br>
+        <input type="text" id="Apellidos" name="Apellidops"><br><br>
+
       <label for="DNI"> DNI:</label>
-        <input type= "text" id="DNI" name="DNI"><br><br>
-      <label for="Fecha de Nacimiento"> Fecha de Nacimiento: </label>
-        <input type= "date" id="Fecha de Nacimiento" name="Fecha de Nacimiento"><br><br>
+        <input type="text" id="DNI" name="DNI"><br><br>
+
+      <label for="FechaNacimiento"> Fecha de Nacimiento: </label>
+        <input type="date" id="FechaNacimiento" name="FechaNacimiento"><br><br>
+
       <label  for="Email"> Email:</label>
-        <input type= "text" id="Email" name="Email"><br><br>
+        <input type="text" id="Email" name="Email"><br><br>
+        
       <p>Los demás campos son opcionales a rellenar</p>
         <label for="telefono">Teléfono:</label>
-            <input type= "tel" id="telefono" name="telefono"><br><br>
+            <input type="tel" id="telefono" name="telefono"><br><br>
         <p>¿Tienes alguna enfermedad o necesidad específica?</p>
             <textarea id="necesidad" name="necesidad" rows="4" cols="50" placeholder="Escribe aquí..."></textarea><br><br>
         <p>¿Tienes vehículo propio?</p>
@@ -39,6 +43,6 @@
             <label for="vehiculo3"> Tengo un Patinete Electrico</label><br>
         <input type="checkbox" id="vehiculo4" name="vehiculo4" value="No tengo">
             <label for="vehiculo4"> No tengo</label><br><br>
-        <input type="submit" value="Enviar">
+        <button type="submit">Enviar</button>
     </form>
 </body>
