--- a/html y css/FormularioInscripción.html
+++ b/html y css/FormularioInscripción.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Formulario de Inscripción</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Formulario de Inscripción</h1>
-    <form action= "/submit" target= "_blank">
+    <form action="/submit" target="_blank">
         <label for="Eventos"> Eventos</label>
         <select id="Eventos" name="Eventos">
             <option value="Encuentros de amantes del automotor"> Encuentros de amantes del automotor</option>
@@ -23,12 +24,9 @@
       <label for="DNI"> DNI:</label>
         <input type="text" id="DNI" name="DNI"><br><br>
 
-      <label for="FechaNacimiento"> Fecha de Nacimiento: </label>
-        <input type="date" id="FechaNacimiento" name="FechaNacimiento"><br><br>
-
       <label  for="Email"> Email:</label>
-        <input type="text" id="Email" name="Email"><br><br>
-        
+        <input type="email" id="Email" name="Email"><br><br>
+
       <p>Los demás campos son opcionales a rellenar</p>
         <label for="telefono">Teléfono:</label>
             <input type="tel" id="telefono" name="telefono"><br><br>
@@ -46,3 +44,4 @@
         <button type="submit">Enviar</button>
     </form>
 </body>
+</html>
