--- a/html y css/FormularioInscripción.html
+++ b/html y css/FormularioInscripción.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Formulario de Inscripción</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
+
     <h1>Formulario de Inscripción</h1>
-    <form action="/submit" target="_blank">
+    <form action="inscripcion_completada.html" method="get" target="_blank">
         <label for="Eventos"> Eventos</label>
         <select id="Eventos" name="Eventos">
             <option value="Encuentros de amantes del automotor"> Encuentros de amantes del automotor</option>
