--- a/html y css/descripcion de ver coches.html
+++ b/html y css/descripcion de ver coches.html
@@ -1,3 +1,31 @@
+ 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>WEBCREATOR</title>
+    <link rel="stylesheet" href="header y footer.css">
+    <link rel="icon" href="logo.png" type="image/png">
+    <link rel="stylesheet" href=".css">
+    </head>
+<body>
+  <nav>
+    <ul class="menu-principal">
+      <li><a href="eventos.html">INICIO</a>
+        <ul class="submenu">
+          <li><a href="descripcion de ver coches.html">Encuentro de amantes del automotor</a></li>
+          <li><a href="#">tour</a></li>
+          <li><a href="#">Encuentro nocturno en pista </a></li>
+          <li><a href="#">Exposición</a></li>
+        </ul>
+      </li>
+        
+       <li> <a href="FormularioInscripción.html">INSCRIPCION</a></li>
+        
+      <li><a href="#">ABOUT US</a></li>
+    </ul>
+  </nav>
  <main>
       <div class="evento">
       <img src="vercoches.png" alt="" srcset="">
