Add form element to the registration form

--- a/html y css/FormularioInscripción.html
+++ b/html y css/FormularioInscripción.html
@@ -8,6 +8,7 @@
 <body>
 
     <h1>Formulario de Inscripción</h1>
+        <form>
         <label for="Eventos"> Eventos</label>
         <select id="Eventos" name="Eventos">
             <option value="Encuentros de amantes del automotor"> Encuentros de amantes del automotor</option>
