eliminacion de form y del archivo inscripcion_completada

--- a/html y css/FormularioInscripción.html
+++ b/html y css/FormularioInscripción.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-
+  <form action="inscripcion_completada.html" method="get">
     <h1>Formulario de Inscripción</h1>
-    <form action="inscripcion_completada.html" method="get" target="_blank">
+    <form action="/submit" target="_blank">
         <label for="Eventos"> Eventos</label>
         <select id="Eventos" name="Eventos">
             <option value="Encuentros de amantes del automotor"> Encuentros de amantes del automotor</option>
@@ -44,5 +44,6 @@
             <label for="vehiculo4"> No tengo</label><br><br>
         <button type="submit">Enviar</button>
     </form>
+  </form>
 </body>
 </html>
