--- a/html y css/inscripcion_completada.html
+++ b/html y css/inscripcion_completada.html
@@ -9,7 +9,7 @@
     <div class="mensaje">
     <h1>¡Tu inscripción se ha completado con éxito!</h1>
     <p>¡Gracias por participar!. Recibirás un correo con la confirmación pronto</p>
-    <a href="FormularioInscripción.html" class="boton modificar">Modificar inscripción</a>
+    <a href="FormularioInscripción.html" class="boton modificar">Modificar inscripción</a><br><br>
     <a href="FormularioInscripción.html" class="boton cancelar">cancelar inscripción</a>
 </div>
 </body>
