concectar base de datos

--- a/html y css/FormularioInscripción.html
+++ b/html y css/FormularioInscripción.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-  <form action="inscripcion_completada.html" method="get">
+  <form action="" method="get">
     <h1>Formulario de Inscripción</h1>
     <form action="/submit" target="_blank">
         <label for="Eventos"> Eventos</label>
