--- a/html y css/FormularioInscripción.html
+++ b/html y css/FormularioInscripción.html
@@ -6,44 +6,46 @@
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-  <form action="" method="get">
+  <form action="http://localhost/miweb/procesar.php" method="post">
     <h1>Formulario de Inscripción</h1>
-    <form action="/submit" target="_blank">
-        <label for="Eventos"> Eventos</label>
-        <select id="Eventos" name="Eventos">
-            <option value="Encuentros de amantes del automotor"> Encuentros de amantes del automotor</option>
-            <option value="Tour"> Tour</option>
-            <option value="Encuentro nocturno"> Encuentro nocturno</option>
-            <option value="Exposicion"> Exposición</option>
-        </select><br><br>
-      <label for="Nombre"> Nombre:</label>
-        <input type="text" id="Nombre" name="Nombre"><br><br>
 
-      <label for="Apellidos"> Apellidos:</label>
-        <input type="text" id="Apellidos" name="Apellidops"><br><br>
+    <p><strong>Selecciona los eventos a los que deseas asistir:</strong></p>
+    <label><input type="checkbox" name="Encuentros_amantes_automotor" value="1"> Encuentros de amantes del automotor</label><br>
+    <label><input type="checkbox" name="Tour" value="1"> Tour</label><br>
+    <label><input type="checkbox" name="Encuentro_nocturno" value="1"> Encuentro nocturno</label><br>
+    <label><input type="checkbox" name="Exposicion" value="1"> Exposicion</label><br><br>
 
-      <label for="DNI"> DNI:</label>
-        <input type="text" id="DNI" name="DNI"><br><br>
+    <label for="nombre">Nombre:</label>
+    <input type="text" id="nombre" name="nombre" required><br><br>
 
-      <label  for="Email"> Email:</label>
-        <input type="email" id="Email" name="Email"><br><br>
+    <label for="apellido">Apellido:</label>
+    <input type="text" id="apellido" name="apellido" required><br><br>
 
-      <p>Los demás campos son opcionales a rellenar</p>
-        <label for="telefono">Teléfono:</label>
-            <input type="tel" id="telefono" name="telefono"><br><br>
-        <p>¿Tienes alguna enfermedad o necesidad específica?</p>
-            <textarea id="necesidad" name="necesidad" rows="4" cols="50" placeholder="Escribe aquí..."></textarea><br><br>
-        <p>¿Tienes vehículo propio?</p>
-        <input type="checkbox" id="vehiculo1" name="vehiculo1" value="Coche">
-            <label for="vehiculo1"> Tengo un coche</label><br>
-        <input type="checkbox" id="vehiculo2" name="vehiculo2" value="Bicicleta">
-            <label for="vehiculo2"> Tengo una bicicleta</label><br>
-        <input type="checkbox" id="vehiculo3" name="vehiculo3" value="Patinete electrico">
-            <label for="vehiculo3"> Tengo un Patinete Electrico</label><br>
-        <input type="checkbox" id="vehiculo4" name="vehiculo4" value="No tengo">
-            <label for="vehiculo4"> No tengo</label><br><br>
-        <button type="submit">Enviar</button>
-    </form>
+    <label for="dni">DNI:</label>
+    <input type="text" id="dni" name="dni" required><br><br>
+
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email" required><br><br>
+
+    <label for="fecha_nacimiento">Fecha de nacimiento:</label>
+    <input type="date" id="fecha_nacimiento" name="fecha_nacimiento"><br><br>
+
+    <label for="telefono">Teléfono:</label>
+    <input type="tel" id="telefono" name="telefono"><br><br>
+
+    <label for="enfermedad">¿Tienes alguna enfermedad o necesidad específica?</label><br>
+    <textarea id="enfermedad" name="enfermedad" rows="4" cols="50" placeholder="Escribe aquí..."></textarea><br><br>
+
+    <p>¿Qué tipo de vehículo tienes?</p>
+    <select id="tipo_coche" name="tipo_coche">
+        <option value="">-- Selecciona --</option>
+        <option value="Coche">Coche</option>
+        <option value="Bicicleta">Bicicleta</option>
+        <option value="Patinete eléctrico">Patinete eléctrico</option>
+        <option value="No tengo">No tengo</option>
+    </select><br><br>
+
+    <button type="submit">Enviar</button>
   </form>
 </body>
 </html>
